Fix Chrome extension icons - replace SVG data URIs with PNG files
- Create PNG icon files (16x16, 48x48, 128x128) to replace inline SVG data URIs
- Update manifest.json to reference PNG files instead of data URIs
- Fixes 'Invalid value for icons' error when loading extension in Chrome
- Chrome extensions do not support SVG or data URI formats for icons

--- a/manifest.json
+++ b/manifest.json
@@ -15,9 +15,9 @@
     }
   ],
   "icons": {
-    "16": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><rect fill='%234CAF50' width='16' height='16' rx='3'/><path fill='white' d='M3 12h2V8H3v4zm4 0h2V4H7v8zm4 0h2V6h-2v6z'/></svg>",
-    "48": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 48 48'><rect fill='%234CAF50' width='48' height='48' rx='8'/><path fill='white' d='M10 36h6V24h-6v12zm12 0h6V12h-6v24zm12 0h6V18h-6v18z'/></svg>",
-    "128": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><rect fill='%234CAF50' width='128' height='128' rx='20'/><path fill='white' d='M26 96h16V64H26v32zm32 0h16V32H58v64zm32 0h16V48H90v48z'/></svg>"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
 }
 
