Refactor content.js to remove dynamic loading of Chart.js; update step comments for clarity. Chart.js is now loaded via manifest.json. Adjusted function step numbers accordingly.

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "content_scripts": [
     {
       "matches": ["https://ultrasignup.com/results_event.aspx*"],
-      "js": ["content.js"],
+      "js": ["chart.min.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_idle"
     }
