Enhance README and codebase with debug mode and HTML scraping fallback. Updated README to clarify components and added testing instructions. Implemented multiple API endpoint attempts in content.js, with fallback to HTML scraping for race results. Introduced debug mode with detailed logging and error handling. Updated manifest to include debugPanel.js and added error message styling in styles.css.

--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,15 @@
   "version": "1.0.0",
   "description": "Adds visual charts to UltraSignup race results pages to show finish time distributions",
   "permissions": [
+    "storage"
+  ],
+  "host_permissions": [
     "https://ultrasignup.com/*"
   ],
   "content_scripts": [
     {
       "matches": ["https://ultrasignup.com/results_event.aspx*"],
-      "js": ["chart.min.js", "content.js"],
+      "js": ["chart.min.js", "debugPanel.js", "content.js"],
       "css": ["styles.css"],
       "run_at": "document_idle"
     }
